Add options for contrast on the workspace background

--- a/scss/_style-settings.scss
+++ b/scss/_style-settings.scss
@@ -345,6 +345,18 @@ settings:
             - 
                 label: No
                 value: disable
+    -
+        id: fas-workspace-foreground-contrast
+        title: Use a higher contrast for elements on the workspace background
+        description: Affects vault name, ribbon, tab names, etc.
+        type: class-toggle
+        default: false
+    -
+        id: fas-workspace-foreground-no-fading
+        title: Never fade out elements on the workspace background
+        description: Affects vault name, ribbon, tab names, etc.
+        type: class-toggle
+        default: false
 
 
     -
