--- a/scss/window/_fas-opposite-bg.scss
+++ b/scss/window/_fas-opposite-bg.scss
@@ -14,6 +14,11 @@ body {
         --workspace-background: var(--color-base-100);
     }
 
+    body.fas-workspace-foreground-contrast > * {
+        --workspace-foreground-muted: var(--color-base-00);
+        --workspace-foreground-faint: var(--color-base-30);
+    }
+
     .titlebar {
         --background-modifier-hover: rgba(var(--mono-rgb-0), 0.075);
     }
