--- a/scss/publish/_file-explorer-rainbow.scss
+++ b/scss/publish/_file-explorer-rainbow.scss
@@ -23,3 +23,21 @@ body {
         filter: saturate(var(--rainbow-saturation)) brightness(var(--rainbow-brightness));
     }
 }
+
+@container style(--fas-rainbow-folders: nested) {
+    .nav-view .tree-item:nth-child(10n + 1) > * {
+        --folder-color: var(--color-rainbow-10);
+    }
+    @for $i from 2 through 10 {
+        .nav-view .tree-item:nth-child(10n + #{$i}) > * {
+            --folder-color: var(--color-rainbow-#{$i - 1});
+        }
+    }
+
+    .nav-view .tree-item > * {
+        --nav-item-color: var(--folder-color);
+        --nav-parent-item-color: var(--folder-color);
+        --nav-item-background-hover: color-mix(in srgb, var(--folder-color), transparent 80%);
+        filter: saturate(var(--rainbow-saturation)) brightness(var(--rainbow-brightness));
+    }
+}
