--- a/scss/window/_window.scss
+++ b/scss/window/_window.scss
@@ -5,6 +5,7 @@
 @use "scrollbar";
 @use "status-bar";
 @use "tab-headers";
+@use "tab-headers-inverted";
 @use "titlebar";
 @use "vault-profile";
 @use "workspace";
