Fix no fading for no flag tabs

--- a/scss/window/sidebars/_sidebar-layout.scss
+++ b/scss/window/sidebars/_sidebar-layout.scss
@@ -63,7 +63,7 @@ body {
 }
 
 .fas-workspace-foreground-no-fading .mod-sidedock .workspace-tab-header-container {
-    --icon-color: var(--workspace-foreground);
+    --icon-opacity: 1;
 }
 
 // Mobile
