--- a/scss/shared/_middle-color.scss
+++ b/scss/shared/_middle-color.scss
@@ -26,7 +26,7 @@
     }
 }
 
-@supports not (color: hsln(from white h s l)) {
+@supports not (color: hsl(from white h s l)) {
     .style-settings-container .setting-item[data-id="header-color"] .setting-item-info::after {
         content: '"Hue" and "Complementary hue" not supported on your device.';
         color: var(--text-muted);
