Remove radius from settings

--- a/scss/window/_window.scss
+++ b/scss/window/_window.scss
@@ -3,6 +3,7 @@
 @use "loading-screen";
 @use "ribbon";
 @use "scrollbar";
+@use "settings";
 @use "status-bar";
 @use "tab-headers";
 @use "tab-headers-inverted";
