Fix blending mode for blank callouts

--- a/scss/editor/callouts/_callout-blank.scss
+++ b/scss/editor/callouts/_callout-blank.scss
@@ -2,7 +2,7 @@
 .callout[data-callout="blank"] {
     margin: 0;
     padding: 0;
-    mix-blend-mode: none;
+    mix-blend-mode: normal;
     border: none;
     background: none;
     border-radius: 0;
