--- a/scss/window/sidebars/_fas-bookmark-tabs.scss
+++ b/scss/window/sidebars/_fas-bookmark-tabs.scss
@@ -18,12 +18,12 @@ body {
             margin-top: var(--workspace-top-margin);
         }
 
-        .workspace-tab-header {
+        .workspace-tab-header-container .workspace-tab-header {
             background-color: var(--workspace-background);
             clip-path: polygon(0 0, 100% 0, 100% 100%, 50% 80%, 0 100%);
         }
 
-        .workspace-tab-header.is-active {
+        .workspace-tab-header-container .workspace-tab-header.is-active {
             background-color: var(--color-accent);
         }
 
@@ -62,7 +62,7 @@ body {
 }
 
 @container style(--fas-bookmark-tabs: volume) {
-    .mod-sidedock .workspace-tab-header {
+    .mod-sidedock .workspace-tab-header-container .workspace-tab-header {
         background-image: linear-gradient(
             to bottom,
             rgb(255 255 255 / 0.08) 2px,
