--- a/scss/editor/lists/_list_rainbow.scss
+++ b/scss/editor/lists/_list_rainbow.scss
@@ -4,13 +4,13 @@ body {
 
 @container style(--fas-rainbow-lists: enable) {
     @for $i from 1 through 10 {
-        .el-ul > ul > li:nth-of-type(10n + #{$i}) .list-bullet::after {
+        .el-ul > ul > li:nth-of-type(10n + #{$i}) {
             --list-marker-color: var(--color-rainbow-#{$i});
+        }
+        .el-ul > ul > li:nth-of-type(10n + #{$i}) .list-bullet::after {
             filter: saturate(var(--rainbow-saturation)) brightness(var(--rainbow-brightness));
         }
-        .el-ol > ol > li:nth-of-type(10n + #{$i}) .list-bullet::after,
-        .el-ol > ol > li:nth-of-type(10n + #{$i})::marker,
-        .el-ol > ol > li:nth-of-type(10n + #{$i}) li::marker {
+        .el-ol > ol > li:nth-of-type(10n + #{$i}) {
             --list-marker-color: var(--color-rainbow-#{$i});
         }
 
