--- a/scss/editor/callouts/_callouts.scss
+++ b/scss/editor/callouts/_callouts.scss
@@ -8,6 +8,7 @@
 @use "callout-clue";
 @use "callout-comic";
 @use "callout-conversation";
+@use "callout-data-header";
 // @use 'callout-cutout';
 @use "callout-email";
 @use "callout-film-strip";
