--- a/scss/skins/_art-deco.scss
+++ b/scss/skins/_art-deco.scss
@@ -310,6 +310,7 @@ $fwi_sel: "";
                 [data-callout="caption"],
                 [data-callout="clue"],
                 [data-callout="comic"],
+                [data-callout="header"],
                 [data-callout="film-strip"],
                 #{$fwi_sel},
                 [data-callout="grid"],
